<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.trafigura.situ</groupId>
    <artifactId>situ-parent</artifactId>
    <packaging>pom</packaging>
    <version>2022.9.0</version>
    <name>situ</name>
    <description>Demo project for situ</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>
        <node.version>v14.17.3</node.version>
        <yarn.version>v1.22.4</yarn.version>
        <npm.version>6.14.4</npm.version>
        <junit-jupiter.version>5.4.2</junit-jupiter.version>
        <mockito.version>2.24.0</mockito.version>
        <maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>
        <poi.version>4.0.1</poi.version>
        <onedesk.version>2022.2.1</onedesk.version>
        <spring.boot.version>2.6.6</spring.boot.version>
        <spring.cloud.version>2021.0.2</spring.cloud.version>
        <azure.bom.version>3.13.0</azure.bom.version>
        <azure.cloud.version>2.13.0</azure.cloud.version>
        <mapstruct.version>1.5.0.Beta2</mapstruct.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <type>pom</type>
                <version>${spring.boot.version}</version>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.azure.spring/azure-spring-boot-bom -->
            <dependency>
                <groupId>com.azure.spring</groupId>
                <artifactId>azure-spring-boot-bom</artifactId>
                <version>${azure.bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.azure.spring</groupId>
                <artifactId>azure-spring-cloud-dependencies</artifactId>
                <version>${azure.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <profiles>
        <profile>
            <id>build-all</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>situ-services/situ-domain</module>
                <module>situ-services/situ-framework</module>
                <module>situ-services/situ-integration-api</module>
                <module>situ-services/situ-integration</module>
                <module>situ-services/situ-query</module>
                <module>situ-services/situ-command</module>
                <module>situ-frontend/situ-ui</module>
                <!--<module>situ-services/situ-deploy</module>-->
            </modules>
        </profile>
        <profile>
            <id>build-ui</id>
            <activation>
            </activation>
            <modules>
                <module>situ-frontend/situ-ui</module>
            </modules>
        </profile>
        <profile>
            <id>build-deploy</id>
            <activation>
            </activation>
            <modules>
                <module>situ-services/situ-domain</module>
                <module>situ-services/situ-framework</module>
                <module>situ-services/situ-integration-api</module>
                <module>situ-services/situ-integration</module>
                <module>situ-services/situ-query</module>
                <module>situ-services/situ-command</module>
                <module>situ-services/situ-deploy</module>
            </modules>
        </profile>
        <profile>
            <id>build-services</id>
            <activation>
            </activation>
            <modules>
                <module>situ-services/situ-domain</module>
                <module>situ-services/situ-framework</module>
                <module>situ-services/situ-integration-api</module>
                <module>situ-services/situ-integration</module>
                <module>situ-services/situ-query</module>
                <module>situ-services/situ-command</module>
            </modules>
        </profile>
    </profiles>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>2.3.3.RELEASE</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.8.1</version>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.0</version>
                    <configuration>
                        <argLine>--illegal-access=permit</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>2.22.0</version>
                    <configuration>
                        <argLine>--illegal-access=permit</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
